--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0"
+    "@nuxt/typescript-build": "^0.5.5",
+    "@nuxtjs/vuetify": "^1.0.0",
   }
 }
