--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
     "@nuxtjs/vuetify": "^1.0.0",
+    "@types/chart.js": "^2.9.8"
   }
 }
