ツール名が決まったので修正

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-manager",
+  "name": "chronalyzer",
   "version": "1.0.0",
   "description": "record and analyze your time.",
   "author": "marco",
