--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
